--- a/src/app/detalle/detalle.page.html
+++ b/src/app/detalle/detalle.page.html
@@ -1,38 +1,39 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>detalle</ion-title>
+    <ion-buttons id ="Volver" slot="start" (click)="clicBotonVolver()"><ion-icon name="arrow-undo-outline"></ion-icon></ion-buttons>
+    <ion-title>Detalle</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-item>
+<ion-content [fullscreen]="true" class="color">
+  <ion-item class="border">
     <ion-label>Marca</ion-label>
     <ion-input [(ngModel)]="document.data.marca"></ion-input>
   </ion-item>
 
-  <ion-item>
+  <ion-item class="border">
     <ion-label>Modelo</ion-label>
     <ion-input [(ngModel)]="document.data.modelo"></ion-input>
   </ion-item>
 
-  <ion-item>
+  <ion-item class="border">
     <ion-label>Anno</ion-label>
     <ion-input [(ngModel)]="document.data.anno"></ion-input>
   </ion-item>
 
-  <ion-item>
+  <ion-item class="border">
     <ion-label>Pais</ion-label>
     <ion-input [(ngModel)]="document.data.pais"></ion-input>
   </ion-item>
 
-  <ion-item>
+  <ion-item class="border">
     <ion-label>Precio</ion-label>
     <ion-input [(ngModel)]="document.data.precio"></ion-input>
   </ion-item >
 
-  <ion-item>
+  <ion-item class="border">
     <ion-label>Imagen</ion-label>
-    <img src="{{document.data.imagen}}">
+    <img class="imagenD" src="{{document.data.imagen}}">
   </ion-item >
 
   <ion-button id ="Añadir" *ngIf= "id =='C'" (click)="clickBotonInsertar()">Añadir</ion-button>
@@ -43,11 +44,10 @@
 
   <ion-button id ="Subir Foto"  (click)="uploadImagePicker()">Subir Foto</ion-button>
 
-  <!-- <ion-button id ="Borrar Foto" (click)="deleteFile()">Borrar Foto</ion-button> -->
+  <ion-button id ="Borrar"  (click)="deleteFile(document.data.imagen)">Eliminar Foto</ion-button>
 
+  <ion-button id="container" (click)="regularSharing()">Compartir</ion-button>
+ 
 
-  <ion-button id ="Volver" (click)="clicBotonVolver()">Volver</ion-button>
-
-  
 </ion-content>
 
