--- a/src/app/detalle/detalle.page.html
+++ b/src/app/detalle/detalle.page.html
@@ -36,17 +36,17 @@
     <img class="imagenD" src="{{document.data.imagen}}">
   </ion-item >
 
-  <ion-button id ="Añadir" *ngIf= "id =='C'" (click)="clickBotonInsertar()">Añadir</ion-button>
+  <ion-button id ="Añadir" *ngIf= "id =='C'" (click)="clickBotonInsertar()" ><ion-icon name="checkmark-done-outline"></ion-icon></ion-button>
   
-  <ion-button id ="Borrar" *ngIf= "id !='C'" (click)="presentAlert()">Borrar</ion-button>
+  <ion-button id ="Borrar" *ngIf= "id !='C'" (click)="presentAlert()"><ion-icon name="trash-outline"></ion-icon></ion-button>
 
-  <ion-button id ="Modificar" *ngIf= "id !='C'" (click)="clicBotonModificar()">Modificar</ion-button>
+  <ion-button id ="Modificar" *ngIf= "id !='C'" (click)="clicBotonModificar()"><ion-icon name="create-outline"></ion-icon></ion-button>
 
-  <ion-button id ="Subir Foto"  (click)="uploadImagePicker()">Subir Foto</ion-button>
+  <ion-button id ="Subir Foto"  (click)="uploadImagePicker()"><ion-icon name="cloud-upload-outline"></ion-icon></ion-button>
 
-  <ion-button id ="Borrar"  (click)="deleteFile(document.data.imagen)">Eliminar Foto</ion-button>
+  <ion-button id ="Borrar"  (click)="deleteFile(document.data.imagen)"><ion-icon name="trash-bin-outline"></ion-icon></ion-button>
 
-  <ion-button id="container" (click)="regularSharing()">Compartir</ion-button>
+  <ion-button id="container" (click)="regularSharing()"><ion-icon name="git-compare-outline"></ion-icon></ion-button>
  
 
 </ion-content>
