--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -30,8 +30,7 @@
     </ion-col>
   </ion-row>
 </ion-grid>
-  <ion-fab-button (click)="llamar()" class="llamada"><ion-icon name="call"></ion-icon></ion-fab-button>
-  
+  <ion-fab-button (click)="llamar()" class="llamada"><ion-icon name="call-outline"></ion-icon></ion-fab-button>
 </ion-content>
   
 <ion-toolbar>
@@ -43,7 +42,7 @@
       </ion-tab-button>
       <ion-tab-button tab="pagina2">
         <ion-icon name="information-circle" id="icons"></ion-icon>
-        <ion-label>Informacion</ion-label>
+        <ion-label>¿Donde estamos?</ion-label>
       </ion-tab-button>
     </ion-tab-bar>
   </ion-tabs>
