--- a/src/app/pagina2/pagina2.page.html
+++ b/src/app/pagina2/pagina2.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>Informacion</ion-title>
+    <ion-title>Ubicacion</ion-title>
   </ion-toolbar>
 </ion-header>
 
@@ -8,6 +8,7 @@
   <div id="mapId" style="width:100%; height:100%; "></div>
 
 </ion-content>
+
 <ion-toolbar>
   <ion-tabs>
     <ion-tab-bar slot="bottom">
@@ -17,7 +18,7 @@
       </ion-tab-button>
       <ion-tab-button tab="pagina2">
         <ion-icon name="information-circle" id="icons"></ion-icon>
-        <ion-label>Informacion</ion-label>
+        <ion-label>¿Donde estamos?</ion-label>
       </ion-tab-button>
     </ion-tab-bar>
   </ion-tabs>
